# kimm_phri_panda_husky

./: CMakeLists.txt  README.md  kimm_phri_panda_husky_plugin.xml  kimm_phri_plugin.xml  package.xml
calibration/: calibration.txt  calibration_data.txt  calibration_data_xy.txt  calibration_data_xy_w_y5deg.txt
cfg/: ekf_param.cfg
config/: franka_control_node.yaml  kimm_husky_controllers.yaml  kimm_phri_panda_husky_controllers.yaml
include/kimm_phri_panda_husky/: panda_husky_hqp.h  phri_real.h  phri_simul.h
launch/: ns0_phri_real.launch  ns0_phri_simulation.launch  ns0_real_robot.launch  ns0_simulation.launch  ns1_phri_real_2f85_local.launch  ns1_phri_real_2f85_remote_control.launch  ns1_phri_real_2f85_robot.launch  ns1_phri_real_local.launch  ns1_phri_real_remote_control.launch  ns1_phri_real_robot.launch  ns1_phri_simulation_2f85_local_notworkingnow.launch  ns1_phri_simulation_local.launch  ns1_phri_simulation_remote_control.launch  ns1_phri_simulation_robot.launch
python/: ns1_real.py  ns1_real_mobile.py  ns1_simulation.py  ns1_simulation_mobile.py
rqt/: kimm_phri.perspective  kimm_phri_panda_husky.perspective  kimm_phri_panda_husky_notebook.perspective  kimm_phri_panda_husky_real_30inch.perspective  kimm_phri_panda_husky_real_49inch.perspective  kimm_phri_panda_husky_sim_49inch.perspective  kimm_phri_panda_husky_sim_aero.perspective  kimm_phri_panda_real_30inch.perspective  kimm_phri_panda_sim_49inch.perspective  kimm_phri_panda_sim_aero.perspective  kimm_phri_record.perspective
rviz/: kimm_phri_panda_husky_real_30inch_rviz.rviz  kimm_phri_panda_husky_real_49inch_rviz.rviz  kimm_phri_panda_husky_rviz.rviz  kimm_phri_panda_husky_rviz_notebook.rviz  kimm_phri_panda_husky_sim_49inch_rviz.rviz  kimm_phri_panda_husky_sim_aero_rviz.rviz  kimm_phri_panda_real_30inch_rviz.rviz  kimm_phri_panda_sim_49inch_rviz.rviz  kimm_phri_panda_sim_aero_rviz.rviz
scripts/: gripper_close.py  gripper_open.py
src/: panda_husky_hqp.cpp  phri_real.cpp  phri_simul.cpp
