<?xml version="1.0"?>
<package format="2">
  <name>kimm_phri_panda_husky</name>
  <version>0.0.1</version>
  <description>The kimm_phri panda husky package</description>

  <maintainer email="jspark2090@kimm.re.kr">Jinseong Park</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>franka_hw</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  
  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>kimm_joint_planner_ros_interface</depend>
  <depend>kimm_se3_planner_ros_interface</depend>
  <depend>kimm_path_planner_ros_interface</depend>
  <!-- <depend>kimm_object_estimation</depend> -->
  <depend>tf</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/kimm_phri_plugin.xml"/>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
